// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Validate Action > check all '**' 1`] = `
[
  "fixtures/sampleCode/samples_with_errors/withErrors.ts:5:19 Unknown word (Functon)",
  "fixtures/sampleCode/samples_with_errors/withErrors.ts:5:27 Unknown word (countt)",
  "../fixtures/sampleCode/samples_with_errors/withErrors.ts:5:19 Unknown word (Functon)",
  "../fixtures/sampleCode/samples_with_errors/withErrors.ts:5:27 Unknown word (countt)",
]
`;

exports[`Validate Action > check all '**/*.md' 1`] = `[]`;

exports[`Validate Action > check files "''" incremental: false 'pull_request_with_files.json', dot: "''" 1`] = `
[
  "../fixtures/sampleCode/samples_with_errors/withErrors.ts:5:19 Unknown word (Functon)",
  "../fixtures/sampleCode/samples_with_errors/withErrors.ts:5:27 Unknown word (countt)",
]
`;

exports[`Validate Action > check files "''" incremental: false 'pull_request_with_files.json', dot: "''" 2`] = `[]`;

exports[`Validate Action > check files "''" incremental: false 'pull_request_with_files.json', dot: "''" 3`] = `
[
  [
    "Pull Request
",
  ],
  [
    "::warning file=../fixtures/sampleCode/samples_with_errors/withErrors.ts,line=5,col=19::Unknown word (Functon)
",
  ],
  [
    "::warning file=../fixtures/sampleCode/samples_with_errors/withErrors.ts,line=5,col=27::Unknown word (countt)
",
  ],
  [
    "Files checked: 4, Issues found: 2 in 1 files.
",
  ],
  [
    "
",
  ],
  [
    "::set-output name=success::false
",
  ],
  [
    "
",
  ],
  [
    "::set-output name=number_of_files_checked::4
",
  ],
  [
    "
",
  ],
  [
    "::set-output name=number_of_issues::2
",
  ],
  [
    "
",
  ],
  [
    "::set-output name=number_of_files_with_issues::1
",
  ],
  [
    "
",
  ],
  [
    "::set-output name=files_with_issues::["../fixtures/sampleCode/samples_with_errors/withErrors.ts"]
",
  ],
  [
    "
",
  ],
  [
    "::set-output name=result::{"success":false,"number_of_issues":2,"number_of_files_checked":4,"files_with_issues":["../fixtures/sampleCode/samples_with_errors/withErrors.ts"]}
",
  ],
]
`;

exports[`Validate Action > check files "''" incremental: false 'pull_request_with_files.json', dot: "''" 4`] = `
[
  "Pull Request",
  "::warning file=../fixtures/sampleCode/samples_with_errors/withErrors.ts,line=5,col=19::Unknown word (Functon)",
  "::warning file=../fixtures/sampleCode/samples_with_errors/withErrors.ts,line=5,col=27::Unknown word (countt)",
  "Files checked: 4, Issues found: 2 in 1 files.",
  "::set-output name=success::false",
  "::set-output name=number_of_files_checked::4",
  "::set-output name=number_of_issues::2",
  "::set-output name=number_of_files_with_issues::1",
  "::set-output name=files_with_issues::["../fixtures/sampleCode/samples_with_errors/withErrors.ts"]",
  "::set-output name=result::{"success":false,"number_of_issues":2,"number_of_files_checked":4,"files_with_issues":["../fixtures/sampleCode/samples_with_errors/withErrors.ts"]}",
]
`;

exports[`Validate Action > check files "''" incremental: false 'pull_request_with_files.json', dot: "'explicit'" 1`] = `
[
  "../fixtures/sampleCode/samples_with_errors/withErrors.ts:5:19 Unknown word (Functon)",
  "../fixtures/sampleCode/samples_with_errors/withErrors.ts:5:27 Unknown word (countt)",
]
`;

exports[`Validate Action > check files "''" incremental: false 'pull_request_with_files.json', dot: "'explicit'" 2`] = `[]`;

exports[`Validate Action > check files "''" incremental: false 'pull_request_with_files.json', dot: "'explicit'" 3`] = `
[
  [
    "Pull Request
",
  ],
  [
    "::warning file=../fixtures/sampleCode/samples_with_errors/withErrors.ts,line=5,col=19::Unknown word (Functon)
",
  ],
  [
    "::warning file=../fixtures/sampleCode/samples_with_errors/withErrors.ts,line=5,col=27::Unknown word (countt)
",
  ],
  [
    "Files checked: 4, Issues found: 2 in 1 files.
",
  ],
  [
    "
",
  ],
  [
    "::set-output name=success::false
",
  ],
  [
    "
",
  ],
  [
    "::set-output name=number_of_files_checked::4
",
  ],
  [
    "
",
  ],
  [
    "::set-output name=number_of_issues::2
",
  ],
  [
    "
",
  ],
  [
    "::set-output name=number_of_files_with_issues::1
",
  ],
  [
    "
",
  ],
  [
    "::set-output name=files_with_issues::["../fixtures/sampleCode/samples_with_errors/withErrors.ts"]
",
  ],
  [
    "
",
  ],
  [
    "::set-output name=result::{"success":false,"number_of_issues":2,"number_of_files_checked":4,"files_with_issues":["../fixtures/sampleCode/samples_with_errors/withErrors.ts"]}
",
  ],
]
`;

exports[`Validate Action > check files "''" incremental: false 'pull_request_with_files.json', dot: "'explicit'" 4`] = `
[
  "Pull Request",
  "::warning file=../fixtures/sampleCode/samples_with_errors/withErrors.ts,line=5,col=19::Unknown word (Functon)",
  "::warning file=../fixtures/sampleCode/samples_with_errors/withErrors.ts,line=5,col=27::Unknown word (countt)",
  "Files checked: 4, Issues found: 2 in 1 files.",
  "::set-output name=success::false",
  "::set-output name=number_of_files_checked::4",
  "::set-output name=number_of_issues::2",
  "::set-output name=number_of_files_with_issues::1",
  "::set-output name=files_with_issues::["../fixtures/sampleCode/samples_with_errors/withErrors.ts"]",
  "::set-output name=result::{"success":false,"number_of_issues":2,"number_of_files_checked":4,"files_with_issues":["../fixtures/sampleCode/samples_with_errors/withErrors.ts"]}",
]
`;

exports[`Validate Action > check files "''" incremental: false 'pull_request_with_files.json', dot: "'true'" 1`] = `
[
  "../fixtures/sampleCode/samples_with_errors/withErrors.ts:5:19 Unknown word (Functon)",
  "../fixtures/sampleCode/samples_with_errors/withErrors.ts:5:27 Unknown word (countt)",
]
`;

exports[`Validate Action > check files "''" incremental: false 'pull_request_with_files.json', dot: "'true'" 2`] = `[]`;

exports[`Validate Action > check files "''" incremental: false 'pull_request_with_files.json', dot: "'true'" 3`] = `
[
  [
    "Pull Request
",
  ],
  [
    "::warning file=../fixtures/sampleCode/samples_with_errors/withErrors.ts,line=5,col=19::Unknown word (Functon)
",
  ],
  [
    "::warning file=../fixtures/sampleCode/samples_with_errors/withErrors.ts,line=5,col=27::Unknown word (countt)
",
  ],
  [
    "Files checked: 6, Issues found: 2 in 1 files.
",
  ],
  [
    "
",
  ],
  [
    "::set-output name=success::false
",
  ],
  [
    "
",
  ],
  [
    "::set-output name=number_of_files_checked::6
",
  ],
  [
    "
",
  ],
  [
    "::set-output name=number_of_issues::2
",
  ],
  [
    "
",
  ],
  [
    "::set-output name=number_of_files_with_issues::1
",
  ],
  [
    "
",
  ],
  [
    "::set-output name=files_with_issues::["../fixtures/sampleCode/samples_with_errors/withErrors.ts"]
",
  ],
  [
    "
",
  ],
  [
    "::set-output name=result::{"success":false,"number_of_issues":2,"number_of_files_checked":6,"files_with_issues":["../fixtures/sampleCode/samples_with_errors/withErrors.ts"]}
",
  ],
]
`;

exports[`Validate Action > check files "''" incremental: false 'pull_request_with_files.json', dot: "'true'" 4`] = `
[
  "Pull Request",
  "::warning file=../fixtures/sampleCode/samples_with_errors/withErrors.ts,line=5,col=19::Unknown word (Functon)",
  "::warning file=../fixtures/sampleCode/samples_with_errors/withErrors.ts,line=5,col=27::Unknown word (countt)",
  "Files checked: 6, Issues found: 2 in 1 files.",
  "::set-output name=success::false",
  "::set-output name=number_of_files_checked::6",
  "::set-output name=number_of_issues::2",
  "::set-output name=number_of_files_with_issues::1",
  "::set-output name=files_with_issues::["../fixtures/sampleCode/samples_with_errors/withErrors.ts"]",
  "::set-output name=result::{"success":false,"number_of_issues":2,"number_of_files_checked":6,"files_with_issues":["../fixtures/sampleCode/samples_with_errors/withErrors.ts"]}",
]
`;

exports[`Validate Action > check files "''" incremental: true 'bad_params/bad_unsupported_event.json', dot: "'explicit'" 1`] = `
[
  "../fixtures/sampleCode/samples_with_errors/withErrors.ts:5:19 Unknown word (Functon)",
  "../fixtures/sampleCode/samples_with_errors/withErrors.ts:5:27 Unknown word (countt)",
]
`;

exports[`Validate Action > check files "''" incremental: true 'bad_params/bad_unsupported_event.json', dot: "'explicit'" 2`] = `[]`;

exports[`Validate Action > check files "''" incremental: true 'bad_params/bad_unsupported_event.json', dot: "'explicit'" 3`] = `
[
  [
    "::warning::Unable to determine which files have changed, checking files: **
",
  ],
  [
    "'fork'
",
  ],
  [
    "::warning file=../fixtures/sampleCode/samples_with_errors/withErrors.ts,line=5,col=19::Unknown word (Functon)
",
  ],
  [
    "::warning file=../fixtures/sampleCode/samples_with_errors/withErrors.ts,line=5,col=27::Unknown word (countt)
",
  ],
  [
    "Files checked: 4, Issues found: 2 in 1 files.
",
  ],
  [
    "
",
  ],
  [
    "::set-output name=success::false
",
  ],
  [
    "
",
  ],
  [
    "::set-output name=number_of_files_checked::4
",
  ],
  [
    "
",
  ],
  [
    "::set-output name=number_of_issues::2
",
  ],
  [
    "
",
  ],
  [
    "::set-output name=number_of_files_with_issues::1
",
  ],
  [
    "
",
  ],
  [
    "::set-output name=files_with_issues::["../fixtures/sampleCode/samples_with_errors/withErrors.ts"]
",
  ],
  [
    "
",
  ],
  [
    "::set-output name=result::{"success":false,"number_of_issues":2,"number_of_files_checked":4,"files_with_issues":["../fixtures/sampleCode/samples_with_errors/withErrors.ts"]}
",
  ],
  [
    "::error::2 spelling issues found in 1 of the 4 files checked.
",
  ],
]
`;

exports[`Validate Action > check files "''" incremental: true 'bad_params/bad_unsupported_event.json', dot: "'explicit'" 4`] = `
[
  "::warning::Unable to determine which files have changed, checking files: **",
  "'fork'",
  "::warning file=../fixtures/sampleCode/samples_with_errors/withErrors.ts,line=5,col=19::Unknown word (Functon)",
  "::warning file=../fixtures/sampleCode/samples_with_errors/withErrors.ts,line=5,col=27::Unknown word (countt)",
  "Files checked: 4, Issues found: 2 in 1 files.",
  "::set-output name=success::false",
  "::set-output name=number_of_files_checked::4",
  "::set-output name=number_of_issues::2",
  "::set-output name=number_of_files_with_issues::1",
  "::set-output name=files_with_issues::["../fixtures/sampleCode/samples_with_errors/withErrors.ts"]",
  "::set-output name=result::{"success":false,"number_of_issues":2,"number_of_files_checked":4,"files_with_issues":["../fixtures/sampleCode/samples_with_errors/withErrors.ts"]}",
  "::error::2 spelling issues found in 1 of the 4 files checked.",
]
`;

exports[`Validate Action > check files "'**'" incremental: true 'bad_params/bad_unsupported_event.json', dot: "'explicit'" 1`] = `
[
  "../fixtures/sampleCode/samples_with_errors/withErrors.ts:5:19 Unknown word (Functon)",
  "../fixtures/sampleCode/samples_with_errors/withErrors.ts:5:27 Unknown word (countt)",
]
`;

exports[`Validate Action > check files "'**'" incremental: true 'bad_params/bad_unsupported_event.json', dot: "'explicit'" 2`] = `[]`;

exports[`Validate Action > check files "'**'" incremental: true 'bad_params/bad_unsupported_event.json', dot: "'explicit'" 3`] = `
[
  [
    "::warning::Unable to determine which files have changed, checking files: **
",
  ],
  [
    "'fork'
",
  ],
  [
    "::warning file=../fixtures/sampleCode/samples_with_errors/withErrors.ts,line=5,col=19::Unknown word (Functon)
",
  ],
  [
    "::warning file=../fixtures/sampleCode/samples_with_errors/withErrors.ts,line=5,col=27::Unknown word (countt)
",
  ],
  [
    "Files checked: 4, Issues found: 2 in 1 files.
",
  ],
  [
    "
",
  ],
  [
    "::set-output name=success::false
",
  ],
  [
    "
",
  ],
  [
    "::set-output name=number_of_files_checked::4
",
  ],
  [
    "
",
  ],
  [
    "::set-output name=number_of_issues::2
",
  ],
  [
    "
",
  ],
  [
    "::set-output name=number_of_files_with_issues::1
",
  ],
  [
    "
",
  ],
  [
    "::set-output name=files_with_issues::["../fixtures/sampleCode/samples_with_errors/withErrors.ts"]
",
  ],
  [
    "
",
  ],
  [
    "::set-output name=result::{"success":false,"number_of_issues":2,"number_of_files_checked":4,"files_with_issues":["../fixtures/sampleCode/samples_with_errors/withErrors.ts"]}
",
  ],
  [
    "::error::2 spelling issues found in 1 of the 4 files checked.
",
  ],
]
`;

exports[`Validate Action > check files "'**'" incremental: true 'bad_params/bad_unsupported_event.json', dot: "'explicit'" 4`] = `
[
  "::warning::Unable to determine which files have changed, checking files: **",
  "'fork'",
  "::warning file=../fixtures/sampleCode/samples_with_errors/withErrors.ts,line=5,col=19::Unknown word (Functon)",
  "::warning file=../fixtures/sampleCode/samples_with_errors/withErrors.ts,line=5,col=27::Unknown word (countt)",
  "Files checked: 4, Issues found: 2 in 1 files.",
  "::set-output name=success::false",
  "::set-output name=number_of_files_checked::4",
  "::set-output name=number_of_issues::2",
  "::set-output name=number_of_files_with_issues::1",
  "::set-output name=files_with_issues::["../fixtures/sampleCode/samples_with_errors/withErrors.ts"]",
  "::set-output name=result::{"success":false,"number_of_issues":2,"number_of_files_checked":4,"files_with_issues":["../fixtures/sampleCode/samples_with_errors/withErrors.ts"]}",
  "::error::2 spelling issues found in 1 of the 4 files checked.",
]
`;

exports[`Validate Action > check files "'fixtures/sampleCode/**'" incremental: false 'pull_request_with_files.json', dot: "'explicit'" 1`] = `[]`;

exports[`Validate Action > check files "'fixtures/sampleCode/**'" incremental: false 'pull_request_with_files.json', dot: "'explicit'" 2`] = `[]`;

exports[`Validate Action > check files "'fixtures/sampleCode/**'" incremental: false 'pull_request_with_files.json', dot: "'explicit'" 3`] = `
[
  [
    "Pull Request
",
  ],
  [
    "Files checked: 0, Issues found: 0 in 0 files.
",
  ],
  [
    "
",
  ],
  [
    "::set-output name=success::true
",
  ],
  [
    "
",
  ],
  [
    "::set-output name=number_of_files_checked::0
",
  ],
  [
    "
",
  ],
  [
    "::set-output name=number_of_issues::0
",
  ],
  [
    "
",
  ],
  [
    "::set-output name=number_of_files_with_issues::0
",
  ],
  [
    "
",
  ],
  [
    "::set-output name=files_with_issues::[]
",
  ],
  [
    "
",
  ],
  [
    "::set-output name=result::{"success":true,"number_of_issues":0,"number_of_files_checked":0,"files_with_issues":[]}
",
  ],
]
`;

exports[`Validate Action > check files "'fixtures/sampleCode/**'" incremental: false 'pull_request_with_files.json', dot: "'explicit'" 4`] = `
[
  "Pull Request",
  "Files checked: 0, Issues found: 0 in 0 files.",
  "::set-output name=success::true",
  "::set-output name=number_of_files_checked::0",
  "::set-output name=number_of_issues::0",
  "::set-output name=number_of_files_with_issues::0",
  "::set-output name=files_with_issues::[]",
  "::set-output name=result::{"success":true,"number_of_issues":0,"number_of_files_checked":0,"files_with_issues":[]}",
]
`;

exports[`Validate Action > check files "'fixtures/sampleCode/**'" incremental: true 'bad_params/bad_unsupported_event.json', dot: "'explicit'" 1`] = `[]`;

exports[`Validate Action > check files "'fixtures/sampleCode/**'" incremental: true 'bad_params/bad_unsupported_event.json', dot: "'explicit'" 2`] = `[]`;

exports[`Validate Action > check files "'fixtures/sampleCode/**'" incremental: true 'bad_params/bad_unsupported_event.json', dot: "'explicit'" 3`] = `
[
  [
    "::warning::Unable to determine which files have changed, checking files: fixtures/sampleCode/**
",
  ],
  [
    "'fork'
",
  ],
  [
    "Files checked: 0, Issues found: 0 in 0 files.
",
  ],
  [
    "
",
  ],
  [
    "::set-output name=success::true
",
  ],
  [
    "
",
  ],
  [
    "::set-output name=number_of_files_checked::0
",
  ],
  [
    "
",
  ],
  [
    "::set-output name=number_of_issues::0
",
  ],
  [
    "
",
  ],
  [
    "::set-output name=number_of_files_with_issues::0
",
  ],
  [
    "
",
  ],
  [
    "::set-output name=files_with_issues::[]
",
  ],
  [
    "
",
  ],
  [
    "::set-output name=result::{"success":true,"number_of_issues":0,"number_of_files_checked":0,"files_with_issues":[]}
",
  ],
]
`;

exports[`Validate Action > check files "'fixtures/sampleCode/**'" incremental: true 'bad_params/bad_unsupported_event.json', dot: "'explicit'" 4`] = `
[
  "::warning::Unable to determine which files have changed, checking files: fixtures/sampleCode/**",
  "'fork'",
  "Files checked: 0, Issues found: 0 in 0 files.",
  "::set-output name=success::true",
  "::set-output name=number_of_files_checked::0",
  "::set-output name=number_of_issues::0",
  "::set-output name=number_of_files_with_issues::0",
  "::set-output name=files_with_issues::[]",
  "::set-output name=result::{"success":true,"number_of_issues":0,"number_of_files_checked":0,"files_with_issues":[]}",
]
`;
